ADD_LIBRARY(p2elements
			aggwrap2.C 
			slot.C 
			print.C 
			printTime.C 
			timedPushSource.C 
			timestampSource.C 
			timedPullSink.C 
			discard.C 
			logger.C 
			pelTransform.C 
			marshal.C 
			marshalField.C 
			hexdump.C 
			csvparser.C 
			unmarshal.C 
			unmarshalField.C 
			route.C 
			demuxConservative.C 
			ddemux.C 
			mux.C 
			roundRobin.C 
			dRoundRobin.C 
			duplicate.C 
			duplicateConservative.C 
			dDuplicateConservative.C 
			dupElim.C 
			filter.C 
			insert.C 
			lookup2.C 
			delete.C 
			timedPullPush.C 
			strToSockaddr.C 
			queue.C 
			functorSource.C 
			tupleSource.C 
			noNull.C 
			noNullField.C 
			unboxField.C 
			printWatch.C 
			aggregate.C 
			update.C 
			refresh.C 
			tupleListener.C 
			tupleSourceInterface.C 
			removed.C)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})